--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>后台管理系统</title>
+    <title>港兴文化</title>
   </head>
   <body>
     <noscript>
